--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Dimi KARAOKE",
+  "name": "Youtube Karaoke Extension",
   "version": "1.0",
   "content_scripts": [
     {
